--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "wh-words-test",
+  "name": "english-whwords-test",
   "version": "1.0.0",
-  "description": "English Wh-words test for students",
-  "main": "api/submit.js",
+  "description": "English Wh-words Test with Telegram reporting",
+  "main": "index.js",
   "scripts": {
-    "dev": "vercel dev"
+    "dev": "node api/submit.js",
+    "start": "node api/submit.js"
   },
   "dependencies": {
-    "node-fetch": "^3.3.2"
+    "node-telegram-bot-api": "^0.64.0"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=18.x"
   }
 }
