--- a/package.json
+++ b/package.json
@@ -1,16 +1,13 @@
 {
-  "name": "english-whwords-test",
+  "name": "wh-words-test",
   "version": "1.0.0",
-  "description": "English Wh-words Test with Telegram reporting",
-  "main": "index.js",
+  "description": "English Wh-words test for students",
+  "main": "api/submit.js",
   "scripts": {
-    "dev": "node api/submit.js",
-    "start": "node api/submit.js"
+    "dev": "vercel dev"
   },
-  "dependencies": {
-    "node-telegram-bot-api": "^0.64.0"
-  },
+  "dependencies": {},
   "engines": {
-    "node": ">=18.x"
+    "node": ">=18"
   }
 }
